k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aws-architect
  labels:
    name: aws-architect
