k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-architect-service
  namespace: aws-architect
  labels:
    app: aws-architect
spec:
  selector:
    app: aws-architect
  ports:
  - name: http
    port: 80
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
